--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.github.shyiko.skedule:skedule:0.3.0'
     compile 'org.reflections:reflections:0.9.11'
     compile 'io.github.microutils:kotlin-logging:1.5.4'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
 }
 
 compileKotlin {
@@ -34,6 +35,10 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+kotlin {
+    experimental.coroutines 'enable'
 }
 
 publishing {
