--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.3.20'
+    ext.ktor_version = '1.1.2'
 
     repositories {
         mavenCentral()
@@ -22,9 +23,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile group: "org.http4k", name: "http4k-core", version: "3.28.0"
-    compile group: "org.http4k", name: "http4k-client-apache", version: "3.28.0"
-    compile group: "org.http4k", name: "http4k-client-websocket", version: "3.28.0"
+    compile "io.ktor:ktor-client-websocket:$ktor_version"
+    compile "io.ktor:ktor-client-cio:$ktor_version"
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.shyiko.skedule:skedule:0.3.0'
     compile 'io.github.microutils:kotlin-logging:1.5.4'
