--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,24 @@
-buildscript {
-    ext.kotlin_version = '1.3.0'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.3.21"
+    id 'maven-publish'
 }
 
 group 'me.agaman'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'kotlin'
-apply plugin: 'maven-publish'
-
 repositories {
-    mavenCentral()
     jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile group: "org.http4k", name: "http4k-core", version: "3.28.0"
-    compile group: "org.http4k", name: "http4k-client-apache", version: "3.28.0"
-    compile group: "org.http4k", name: "http4k-client-websocket", version: "3.28.0"
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
+    compile 'io.github.microutils:kotlin-logging:1.5.4'
+    compile 'org.http4k:http4k-core:3.28.0'
+    compile 'org.http4k:http4k-client-apache:3.28.0'
+    compile 'org.http4k:http4k-client-websocket:3.28.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.shyiko.skedule:skedule:0.3.0'
-    compile 'io.github.microutils:kotlin-logging:1.5.4'
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
 }
 
 compileKotlin {
