--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.21"
     id 'maven-publish'
+    id "com.jfrog.bintray" version "1.8.4"
 }
 
 group 'me.agaman'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 repositories {
     jcenter()
@@ -26,4 +27,86 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+javadoc.failOnError = false
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
+
+def pomConfig = {
+    licenses {
+        license {
+            name "GNU GENERAL PUBLIC LICENSE, Version 3"
+            url "https://www.gnu.org/licenses/gpl-3.0.txt"
+            distribution "repo"
+        }
+    }
+    developers {
+        developer {
+            id "agaman"
+            name "Adrián García"
+            email "dev@agaman.me"
+        }
+    }
+
+    scm {
+        url "https://github.com/kravent/slackk"
+    }
+}
+
+publishing {
+    publications {
+        SlackkMavenPublication(MavenPublication) {
+            from components.java
+            artifact sourcesJar {
+                classifier "sources"
+            }
+            artifact javadocJar {
+                classifier "javadoc"
+            }
+            groupId 'me.agaman'
+            artifactId 'slackk'
+            version '0.1'
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('description', 'Slack API implementation in Kotlin')
+                root.appendNode('name', 'Slackk')
+                root.appendNode('url', 'https://github.com/kravent/slackk')
+                root.children().last() + pomConfig
+            }
+        }
+    }
+}
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_API_KEY')
+    publications = ['SlackkMavenPublication']
+
+    pkg {
+        repo = 'slackk'
+        name = 'slackk'
+        userOrg = 'kravent'
+        licenses = ['GPL-3.0']
+        vcsUrl = 'https://github.com/kravent/slackk'
+        version {
+            name = '0.1'
+            released  = new Date()
+        }
+    }
+
 }
